--- a/cadastros/templates/cadastros/form.html
+++ b/cadastros/templates/cadastros/form.html
@@ -1,24 +1,30 @@
-{% extends "paginas/modelo.html" % }
+{% extends "paginas/modelo.html" %}
+
 {% load static %}
 {% load crispy_forms_tags %}
 
 {% block conteudo %}
 
-<h3>Cadastros do Sistema</h3>
+<h3>
+    {{ titulo|default:"Registros do sistema" }}
+</h3>
 
-<form action="POST">
-    {% csrf_token %}
-
-    {{ form|crispy }}
-    
-    crispy(form)
-
-    <button type="submit" class="btn btn-sucess">
-        Salvar
-    </button>
-
-
-</form>
+<div class="row">
+    <div class="col-lg-6">
+        
+        <form method="POST">
+            {% csrf_token %}
+        
+            {{ form|crispy }} 
+        
+            <button type="submit" class="btn btn-success">
+                Salvar
+            </button>
+        
+        </form>
+        
+    </div>
+</div>
 
 
 {% endblock %}
