--- a/paginas/templates/paginas/modelo copy.html
+++ b/paginas/templates/paginas/modelo copy.html
@@ -11,15 +11,11 @@
         <meta name="author" content="" />
         {% comment %} Definição de um bloco para alteração de título {% endcomment %}
         <title>{% block titulo %}Dashboard - SB Admin{% endblock %}</title>
-        
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
-        
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-        
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     <body class="sb-nav-fixed">
-
         {% block menu_superior %}
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
             <!-- Navbar Brand-->
@@ -46,39 +42,35 @@
                 </li>
             </ul>
         </nav>
+
         {% endblock %}
 
+        
         <div id="layoutSidenav">
 
             {% block menu_lateral %}
-            
+
             <div id="layoutSidenav_nav">
                 <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                     <div class="sb-sidenav-menu">
                         <div class="nav">
                             <div class="sb-sidenav-menu-heading">Core</div>
-                            <a class="nav-link" href="{% url 'index' %}">
+                            <a class="nav-link" href="index.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                                Home
-                            </a>
-                            <a class="nav-link" href="{% url 'sobre' %}">
-                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                                Sobre
+                                Dashboard
                             </a>
                             <div class="sb-sidenav-menu-heading">Interface</div>
-                            
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
                                 <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                                Cadastros
+                                Layouts
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="{% url 'cadastrar-cidade' %}">Cidade</a>
-                                    <a class="nav-link" href="{% url 'cadastrar-pessoa' %}">Pessoa</a>
+                                    <a class="nav-link" href="layout-static.html">Static Navigation</a>
+                                    <a class="nav-link" href="layout-sidenav-light.html">Light Sidenav</a>
                                 </nav>
                             </div>
-
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
                                 <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                                 Pages
@@ -127,12 +119,12 @@
                     </div>
                 </nav>
             </div>
+
             {% endblock %}
-            
+
             <div id="layoutSidenav_content">
                 <main>
                     <div class="container-fluid px-4">
-                        <br>
                         {% block conteudo %}
                         <h1 class="mt-4">Dashboard</h1>
                         <ol class="breadcrumb mb-4">
@@ -264,24 +256,16 @@
                                             <td>2008/11/28</td>
                                             <td>$162,700</td>
                                         </tr>
-                                        <tr>
-                                            <td>Brielle Williamson</td>
-                                            <td>Integration Specialist</td>
-                                            <td>New York</td>
-                                            <td>61</td>
-                                            <td>2012/12/02</td>
-                                            <td>$372,000</td>
-                                        </tr>
                                     </tbody>
                                 </table>
                             </div>
                         </div>
-
-                        {% endblock %}
                     </div>
+                    {% endblock %}
                 </main>
 
                 {% block rodape %}
+
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
                         <div class="d-flex align-items-center justify-content-between small">
@@ -294,23 +278,22 @@
                         </div>
                     </div>
                 </footer>
-                {% endblock %}
 
+                {% endblock %}
 
             </div>
         </div>
-
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="{% static 'js/scripts.js' %}"></script>
+        <script src="js/scripts.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-        <script src="{% static 'assets/demo/chart-area-demo.js' %}"></script>
-        <script src="{% static 'assets/demo/chart-bar-demo.js' %}"></script>
+        <script src="assets/demo/chart-area-demo.js"></script>
+        <script src="assets/demo/chart-bar-demo.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
-        <script src="{% static 'js/datatables-simple-demo.js' %}"></script>
-
-        {% block scripts %}        
+        <script src="js/datatables-simple-demo.js"></script>
+    
+        {% block script %}
 
         {% endblock %}
-
+    
     </body>
 </html>
