--- a/paginas/templates/paginas/modelo.html
+++ b/paginas/templates/paginas/modelo.html
@@ -76,6 +76,9 @@
                                 <nav class="sb-sidenav-menu-nested nav">
                                     <a class="nav-link" href="{% url 'cadastrar-cidade' %}">Cidade</a>
                                     <a class="nav-link" href="{% url 'cadastrar-pessoa' %}">Pessoa</a>
+                                    <a class="nav-link" href="{% url 'cadastrar-prefeitura' %}">Prefeitura</a>
+                                    <a class="nav-link" href="{% url 'cadastrar-produto' %}">Produto</a>
+                                    <a class="nav-link" href="{% url 'cadastrar-ordem-de-compra' %}">Ordem de Compra</a>
                                 </nav>
                             </div>
 
