--- a/cadastros/templates/cadastros/list/ordemDeCompra.html
+++ b/cadastros/templates/cadastros/list/ordemDeCompra.html
@@ -3,15 +3,18 @@
 {% block conteudo %}
 
 <h3> 
-    Lista de <b>Cidades</b>
+    Lista de <b>Ordens de Compra</b>
 </h3>
 
 <hr>
 
 <table class="table table-striped">
     <thead>
+        <th>Nome</th>
+        <th>Prefeitura</th>
         <th>Cidade</th>
-        <th>Estado</th>
+        <th>produtos</th>
+        <th>Entregue</th>
         <th>Opções</th>
     </thead>
    <tbody>
@@ -19,14 +22,17 @@
     {% for object in object_list %}
     <tr>
 
-        <td>{{object.name}}</td>
-        <td>{{object.estado}}</td>
+        <td>{{object.produtos}}</td>
+        <td>{{object.prefeitura}}</td>
+        <td>{{object.cidade}}</td>
+        <td>{{object.entregue}}</td>
+
         <td>
-        <a href="{% url 'editar-cidade' object.pk %}" class="btn btn-sm btn-out">
+        <a href="{% url 'editar-produtos' object.pk %}" class="btn btn-sm btn-out">
             Editar
         </a>
 
-        <a href="{% url 'excluir-cidade' object.pk %}" class="btn btn-sm btn-out">
+        <a href="{% url 'excluir-produtos' object.pk %}" class="btn btn-sm btn-out">
             Excluir
         </a>
     {% empty %}
