--- a/paginas/templates/paginas/modelo.html
+++ b/paginas/templates/paginas/modelo.html
@@ -321,6 +321,26 @@
         </div>
     </div>
 
+    {% if messages %}
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+
+
+        {% for m in messages %}
+        <div class="toast border-{{m.tags}}" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header border-{{m.tags}}">
+                <strong class="me-auto">Aviso</strong>
+                <small class="text-body-secondary">Agora</small>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+                {{ m }}
+            </div>
+        </div>
+        {% endfor %}
+
+    </div>
+    {% endif %}
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
     <script src="{% static 'js/scripts.js' %}"></script>
@@ -331,9 +351,17 @@
         crossorigin="anonymous"></script>
     <script src="{% static 'js/datatables-simple-demo.js' %}"></script>
 
+
     {% block scripts %}
 
     {% endblock %}
+
+
+    <script>
+        $(document).ready(function () {
+            $('.toast').toast('show');
+        })
+    </script>
 
 </body>
 
