--- a/cadastros/templates/cadastros/list/pessoa.html
+++ b/cadastros/templates/cadastros/list/pessoa.html
@@ -51,3 +51,13 @@
 </table>
 
 {% endblock %}
+
+{% block scripts %}
+<link href="https://cdn.datatables.net/v/bs5/dt-2.1.8/datatables.min.css" rel="stylesheet">
+<script src="https://cdn.datatables.net/v/bs5/dt-2.1.8/datatables.min.js"></script>
+<script>
+
+    $(document).ready( function(){
+            
+    })
+</script>
