--- a/paginas/templates/paginas/modelo.html
+++ b/paginas/templates/paginas/modelo.html
@@ -300,6 +300,26 @@
 
                     {% endblock %}
                 </div>
+
+
+                    {% if messages %}
+                    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+                    
+                        {% for m in messages %}
+                        <div class="toast border-{{m.tags}}" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="10000">
+                            <div class="toast-header border-{{m.tags}}">
+                                <strong class="me-auto">Aviso</strong>
+                                <small class="text-body-secondary">Agora</small>
+                                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                            </div>
+                            <div class="toast-body">
+                                {{ m }}
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+
             </main>
 
             {% block rodape %}
@@ -321,26 +341,8 @@
         </div>
     </div>
 
-    {% if messages %}
-    <div class="toast-container position-fixed bottom-0 end-0 p-3">
 
-
-        {% for m in messages %}
-        <div class="toast border-{{m.tags}}" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-header border-{{m.tags}}">
-                <strong class="me-auto">Aviso</strong>
-                <small class="text-body-secondary">Agora</small>
-                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-            </div>
-            <div class="toast-body">
-                {{ m }}
-            </div>
-        </div>
-        {% endfor %}
-
-    </div>
-    {% endif %}
-
+    <script src="{% static 'js/jquery-3.7.1.slim.min.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
     <script src="{% static 'js/scripts.js' %}"></script>
@@ -358,9 +360,9 @@
 
 
     <script>
-        $(document).ready(function () {
-            $('.toast').toast('show');
-        })
+document.querySelectorAll('.toast').forEach(function (toast) {
+    new bootstrap.Toast(toast).show();
+});
     </script>
 
 </body>
