Alterações em sala

--- a/cadastros/templates/cadastros/list/cidade.html
+++ b/cadastros/templates/cadastros/list/cidade.html
@@ -8,6 +8,10 @@
 
 <hr>
 
+    {% load crispy_forms_tags %}
+
+    {% include 'cadastros/list/filters_form.html' %}
+
 <table class="table table-striped">
     <thead>
         <th>Cidade</th>
