--- a/cadastros/templates/cadastros/form.html
+++ b/cadastros/templates/cadastros/form.html
@@ -30,15 +30,17 @@
 
 {% block scripts %}
 
-<script src="{% static 'js/jquert.mask.min.js' %}"> </script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
 
 <script> 
     $(document).ready(function(){
-        $("#id_nascimento").mask('000.000.000-00')
-        $("input[name*=telefone], input[name*+celular]").masl
+        $("#id_nascimento").mask('00.00.0000'); 
+        
+        $("input[name*='telefone'], input[name*='celular']").mask('(00) 00000-0000'); // Para telefone/celular
+        
+        $('#id_cnpj').mask('00.000.000/0000-00', {reverse: true}); // CNPJ com formato
     });
-
-
 </script>
 
 {% endblock %}
