--- a/cadastros/templates/cadastros/list/pessoa.html
+++ b/cadastros/templates/cadastros/list/pessoa.html
@@ -1,71 +1,82 @@
-{% extends "paginas/modelo.html" %}
+    {% extends "paginas/modelo.html" %}
 
-{% block conteudo %}
+    {% block conteudo %}
 
-<h3>
-    Lista de <b>Pessoas</b>
-</h3>
+    <h3>
+        Lista de <b>Pessoas</b>
+    </h3>
 
-<hr>
+    <hr>
 
-    {% load crispy_forms_tags %}
+    <a href="{% url 'cadastrar-pessoa' %}" class="btn btn-primary">
+        Cadastrar Pessoa
+    </a>
+    
+        <table id="table-lista" class="table table-striped">
+            <thead>
+                <th>Nome completo</th>
+                <th>Nascimento</th>
+                <th>Email</th>
+                <th>Atualizado em</th>
+                <th>Opções</th>
+            </thead>
+            <tbody>
+                {% for object in object_list %}
+                    <tr>
+                        <td>{{ object.nome_completo }}</td>
+                        <td>{{ object.nascimento|date:"d/m/Y" }}</td>
+                        <td>{{ object.email }}</td>
+                        <td>{{ object.atualizado_em|date:"d/m/Y \à\s H:i" }}</td>
+                        <td>
+                            <div class="dropdown">
+                                <button class="btn btn-light btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="bi bi-gear"></i>
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a class="dropdown-item link-primary" href="{% url 'editar-pessoa' object.pk  %}">
+                                            <i class="bi bi-pencil-square"></i> Editar
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item link-danger" href="{% url 'excluir-pessoa' object.pk  %}">
+                                            <i class="bi bi-trash"></i> Excluir
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </td>
+                    </tr>
+                {% empty %}
+                    <tr>
+                        <td colspan="5">Nenhum registro encontrado.</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        
 
-    {% include 'cadastros/list/filters_form.html' %}
+    {% endblock %}
 
-<table class="table table-striped">
-    <thead>
-        <th>Nome completo</th>
-        <th>Nascimento</th>
-        <th>Email</th>
-        <th>Atualizado em</th>
-        <th>Opções</th>
-    </thead>
-    <tbody>
-        {% for object in object_list %}
-            <tr>
-                <td>{{ object.nome_completo }}</td>
-                <td>{{ object.nascimento|date:"d/m/Y" }}</td>
-                <td>{{ object.email }}</td>
-                <td>{{ object.atualizado_em|date:"d/m/Y \à\s H:i" }}</td>
-                <td>
-                    <div class="dropdown">
-                        <button class="btn btn-light btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="bi bi-gear"></i>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a class="dropdown-item link-primary" href="{% url 'editar-pessoa' object.pk  %}">
-                                    <i class="bi bi-pencil-square"></i> Editar
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item link-danger" href="{% url 'excluir-pessoa' object.pk  %}">
-                                    <i class="bi bi-trash"></i> Excluir
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </td>
-            </tr>
-        {% empty %}
-            <tr>
-                <td colspan="5">Nenhum registro encontrado.</td>
-            </tr>
-        {% endfor %}
-    </tbody>
-</table>
+    {% block scripts %}
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-{% endblock %}
+    <link href="https://cdn.datatables.net/v/bs5/dt-2.1.8/datatables.min.css" rel="stylesheet">
+    <script src="https://cdn.datatables.net/v/bs5/dt-2.1.8/datatables.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#table-lista').DataTable({
+                paging: true,          // Ativar paginação
+                searching: true,       // Ativar barra de busca
+                ordering: true,        // Ativar ordenação
+                info: true,            // Mostrar informações ("Mostrando X de Y entradas")
+                language: {            // Configurar a linguagem para PT-BR
+                    "url": "//cdn.datatables.net/plug-ins/1.10.21/i18n/Portuguese-Brasil.json"
+                }
+            });
 
-{% block scripts %}
-
-<link href="https://cdn.datatables.net/v/bs5/dt-2.1.8/datatables.min.css" rel="stylesheet">
-<script src="https://cdn.datatables.net/v/bs5/dt-2.1.8/datatables.min.js"></script>
-<script>
-
-    $(document).ready( function(){
-            
-    })
-</script>
-
-{% endblock %}
+            // Alterar o input de data no filtro
+            $("input[name*=nascimento]").prop("type", "date");
+        });
+    </script>
+    {% endblock scripts %}
