--- a/cadastros/templates/cadastros/list/cidade.html
+++ b/cadastros/templates/cadastros/list/cidade.html
@@ -8,11 +8,12 @@
 
 <hr>
 
-    {% load crispy_forms_tags %}
+<a href="{% url 'cadastrar-cidade' %}" class="btn btn-primary">
+    Cadastrar Cidade
+</a>
 
-    {% include 'cadastros/list/filters_form.html' %}
 
-<table class="table table-striped">
+<table id="table-cidades" class="table table-striped">
     <thead>
         <th>Cidade</th>
         <th>Estado</th>
@@ -22,25 +23,56 @@
 
     {% for object in object_list %}
     <tr>
-
-        <td>{{object.name}}</td>
-        <td>{{object.estado}}</td>
+        <td>{{ object.name }}</td>
+        <td>{{ object.estado }}</td>
         <td>
-        <a href="{% url 'editar-cidade' object.pk %}" class="btn btn-sm btn-out">
-            Editar
-        </a>
-
-        <a href="{% url 'excluir-cidade' object.pk %}" class="btn btn-sm btn-out">
-            Excluir
-        </a>
+            <div class="dropdown">
+                <button class="btn btn-light btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-gear"></i>
+                </button>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a class="dropdown-item link-primary" href="{% url 'editar-cidade' object.pk  %}">
+                            <i class="bi bi-pencil-square"></i> Editar
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item link-danger" href="{% url 'excluir-cidade' object.pk  %}">
+                            <i class="bi bi-trash"></i> Excluir
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </td>
+    </tr>
     {% empty %}
         <tr>
             <td colspan="3">Nenhum registro encontrado.</td>
         </tr>
-
     {% endfor %}
-
    </tbody>
 </table>
 
 {% endblock %}
+
+{% block scripts %}
+<!-- Incluindo o jQuery, DataTables CSS e JS -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link href="https://cdn.datatables.net/v/bs5/dt-2.1.8/datatables.min.css" rel="stylesheet">
+<script src="https://cdn.datatables.net/v/bs5/dt-2.1.8/datatables.min.js"></script>
+
+<script>
+    $(document).ready(function() {
+        // Inicializando o DataTables na tabela de cidades
+        $('#table-cidades').DataTable({
+            paging: true,          // Ativar paginação
+            searching: true,       // Ativar barra de busca
+            ordering: true,        // Ativar ordenação
+            info: true,            // Mostrar informações ("Mostrando X de Y entradas")
+            language: {            // Configurar a linguagem para PT-BR
+                "url": "//cdn.datatables.net/plug-ins/1.10.21/i18n/Portuguese-Brasil.json"
+            }
+        });
+    });
+</script>
+{% endblock scripts %}
