--- a/cadastros/templates/cadastros/list/cidade.html
+++ b/cadastros/templates/cadastros/list/cidade.html
@@ -12,6 +12,8 @@
     Cadastrar Cidade
 </a>
 
+    {% load crispy_forms_tags %}
+    {% include 'cadastros/list/filters_form.html' %}
 
 <table id="table-cidades" class="table table-striped">
     <thead>
@@ -70,7 +72,7 @@
             ordering: true,        // Ativar ordenação
             info: true,            // Mostrar informações ("Mostrando X de Y entradas")
             language: {            // Configurar a linguagem para PT-BR
-                "url": "//cdn.datatables.net/plug-ins/1.10.21/i18n/Portuguese-Brasil.json"
+                "url": "https://cdn.datatables.net/plug-ins/1.11.5/i18n/pt-BR.json"
             }
         });
     });
