--- a/cadastros/templates/cadastros/list/pessoa.html
+++ b/cadastros/templates/cadastros/list/pessoa.html
@@ -1,5 +1,5 @@
     {% extends "paginas/modelo.html" %}
-
+    {% load static %}
     {% block conteudo %}
 
     <h3>
@@ -11,6 +11,9 @@
     <a href="{% url 'cadastrar-pessoa' %}" class="btn btn-primary">
         Cadastrar Pessoa
     </a>
+    
+        {% load crispy_forms_tags %}
+    {% include 'cadastros/list/filters_form.html' %}
     
         <table id="table-lista" class="table table-striped">
             <thead>
@@ -71,7 +74,8 @@
                 ordering: true,        // Ativar ordenação
                 info: true,            // Mostrar informações ("Mostrando X de Y entradas")
                 language: {            // Configurar a linguagem para PT-BR
-                    "url": "//cdn.datatables.net/plug-ins/1.10.21/i18n/Portuguese-Brasil.json"
+                    "url": "https://cdn.datatables.net/plug-ins/1.11.5/i18n/pt-BR.json"
+
                 }
             });
 
