--- a/cadastros/templates/cadastros/list/produto.html
+++ b/cadastros/templates/cadastros/list/produto.html
@@ -70,7 +70,7 @@
             ordering: true,        // Ativar ordenação
             info: true,            // Mostrar informações ("Mostrando X de Y entradas")
             language: {            // Configurar a linguagem para PT-BR
-                "url": "//cdn.datatables.net/plug-ins/1.10.21/i18n/Portuguese-Brasil.json"
+                "url": "https://cdn.datatables.net/plug-ins/1.11.5/i18n/pt-BR.json"
             }
         });
 
